@@ -1,3 +1,11 @@
+2005-05-08  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Better fix for out of order FORGET messages.  Now the
+	LOOKUP/FORGET messages are balanced exactly (one FORGET can
+	balance many lookups), so the order no longer matters.  This
+	changes the ABI slightly, but the library remains backward
+	compatible.
+
 2005-05-06  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix abort for out of order FORGET messages.  Again.  Spotted by
